# backup-monitor

./: Cargo.toml  LICENSE  README.md  pre-build.sh
.github/workflows/: release.yml  rust.yml  test.yml
src/: clock.rs  event.rs  main.rs  main_loop.rs  manager.rs  mock_manager.rs  round_duration.rs  script_manager.rs  settings.rs  tray.rs  tray_handle.rs
src/snapshots/: backup_monitor__settings__tests__deserialize_empty.snap  backup_monitor__settings__tests__deserialize_full.snap  backup_monitor__settings__tests__deserialize_minimal.snap
src/test_cases/main_loop/: next_reminder_now.hjson  next_reminder_sleep.hjson  next_reminder_with_last_reminder_blocking.hjson  next_reminder_with_last_reminder_blocking_schedule.hjson  next_reminder_with_last_reminder_expired.hjson  next_reminder_with_last_reminder_expired_schedule.hjson  next_ui_update.hjson  next_ui_update_with_blocked_reminder.hjson  waiting_for_path.hjson  waiting_for_time.hjson
src/test_cases/manager/: blocked_by_last_backup_1.hjson  blocked_by_last_backup_2.hjson  blocked_by_last_backup_3.hjson  blocked_by_last_backup_4.hjson  empty.hjson  failed_with_cooldown.hjson  failed_without_cooldown.hjson  never_backed_up.hjson  running.hjson  waiting_for_path.hjson
