[package]
name = "backup-monitor"
version = "0.1.0"
homepage = "https://github.com/dfaust/backup-monitor"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
arc-swap = "1.7.1"
auto-launch = "0.5.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "now",
    "serde",
] }
dirs = "5.0.1"
env_logger = "0.11.5"
fake = { version = "3.0.1", features = ["chrono"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
itertools = "0.13.0"
ksni = "0.2.2"
log = "0.4.22"
mio = { version = "1.0.2", features = ["os-ext", "os-poll"] }
notify = { version = "7.0.0", default-features = false }
notify-rust = "4.11.3"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tempfile = "3.13.0"

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.40.0", features = ["yaml"] }
rstest = "0.23.0"
serde-hjson = "1.1.0"
